--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.2" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="keywords" content="Mechanic, Car, Auto" />
-		<meta name="description" content="Responsive Mechanic Auto Shop Template" />
+		<meta name="description" content="מוסך א.א.צ מאור" />
 		<!--slider revolution-->
 		<link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
 		<!--style-->
