--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>מוסך א.א.צ מאור</title><title>מוסך א.א.צ מאור</title>
+		<title>מוסך א.א.צ מאור</title>
 		<!--meta-->
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.2" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="keywords" content="Mechanic, Car, Auto" />
-		<meta name="description" content="Responsive Mechanic Auto Shop Template" />
+		<meta name="description" content="מוסך א.א.צ מאור" />
 		<!--slider revolution-->
 		<link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
 		<!--style-->
@@ -623,7 +623,7 @@
 						<h6 class="box-header">השירותים שלנו</h6>
 						<ul class="list margin-top-20">
 							<li>סיכה, שמן ופילטרים</li>
-							<li>רצועות הינע וצינורות</li>
+							<li>רצועות הנעה וצינורות</li>
 							<li>מיזוג אוויר</li>
 							<li>תיקוני בלמים</li>
 							<li>צמיגים</li>
