--- a/galleries.html
+++ b/galleries.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.2" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="keywords" content="Mechanic, Car, Auto" />
-		<meta name="description" content="Responsive Mechanic Auto Shop Template" />
+		<meta name="description" content="מוסך א.א.צ מאור" />
 		<!--slider revolution-->
 		<link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
 		<!--style-->
@@ -32,7 +32,7 @@
 				<div class="header-top-bar">
 					<ul class="contact-details clearfix">
 						<li class="template-phone">
-							08-9353422
+							<a href="tel:089353422">08-9353422</a>
 						</li>
 						<li class="template-mail">
 							<a href="mailto:aazmaor@walla.co.il">aazmaor@walla.co.il</a>
@@ -41,7 +41,7 @@
 							א׳- ה׳ : 7:30 - 17:00 ו׳ : 7:30-14:00
 						</li>
 					</ul>
-					<div class="search-container">
+					<!-- <div class="search-container">
 						<a class="template-search" href="#" title="Search"></a>
 						<form class="search" action="search.html">
 							<input type="text" name="s" placeholder="Search..." value="Search..." class="search-input hint">
@@ -50,9 +50,9 @@
 								<input type="submit" class="search-submit" value="">
 							</fieldset>
 						</form>
-					</div>
+					</div> -->
 					<ul class="social-icons">
-						<li>
+						<!-- <li>
 							<a target="_blank" href="http://facebook.com/QuanticaLabs" class="social-facebook" title="facebook"></a>
 						</li>
 						<li>
@@ -528,11 +528,11 @@
 				<div class="row gray full-width page-header vertical-align-table">
 					<div class="row full-width padding-top-bottom-50 vertical-align-cell">
 						<div class="row">
-							<div class="page-header-left">
-								<h1>RECENT GALLERIES</h1>
+							<div class="page-header-right">
+								<h1>גלריה</h1>
 							</div>
 							<div class="page-header-right">
-								<div class="bread-crumb-container">
+							<!--	<div class="bread-crumb-container">
 									<label>YOU ARE HERE:</label>
 									<ul class="bread-crumb">
 										<li>
@@ -547,21 +547,23 @@
 											RECENT GALLERIES
 										</li>
 									</ul>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
 				</div>
+
+				<br><br><br><br><br><br><br><br><br>
 				<div class="clearfix">
 					<div class="row">
-						<ul class="tabs-navigation small gray isotope-filters margin-top-70">
+						<!-- <ul class="tabs-navigation small gray isotope-filters margin-top-70">
 							<li><a class="selected" href="#filter-*" title="All Galleries">All Galleries</a></li>
 							<li><a href="#filter-brakes" title="Brakes">Brakes</a></li>
 							<li><a href="#filter-suspension" title="Suspension">Suspension</a></li>
 							<li><a href="#filter-wheels" title="Wheels">Wheels</a></li>
 							<li><a href="#filter-steering" title="Steering">Steering</a></li>
 							<li><a href="#filter-transmission" title="Transmission">Transmission</a></li>
-						</ul>
+						</ul> -->
 						<ul class="galleries-list isotope">
 							<li class="transmission">
 								<a href="gallery_engine_diagnostics.html" title="Engine Diagnostics">
@@ -570,8 +572,8 @@
 								<div class="view align-center">
 									<div class="vertical-align-table">
 										<div class="vertical-align-cell">
-											<p class="description">Engine Diagnostics</p>
-											<a class="more simple" href="gallery_engine_diagnostics.html" title="READ MORE">READ MORE</a>
+											<p class="description">דיאגנוסטיקת מנוע</p>
+											<!-- <a class="more simple" href="gallery_engine_diagnostics.html" title="READ MORE">READ MORE</a> -->
 										</div>
 									</div>
 								</div>
@@ -583,8 +585,8 @@
 								<div class="view align-center">
 									<div class="vertical-align-table">
 										<div class="vertical-align-cell">
-											<p class="description">Oil Change</p>
-											<a class="more simple" href="gallery_oil_change.html" title="READ MORE">READ MORE</a>
+											<p class="description">החלפת שמן</p>
+											<!-- <a class="more simple" href="gallery_oil_change.html" title="READ MORE">READ MORE</a> -->
 										</div>
 									</div>
 								</div>
@@ -596,8 +598,8 @@
 								<div class="view align-center">
 									<div class="vertical-align-table">
 										<div class="vertical-align-cell">
-											<p class="description">Belts and Hoses</p>
-											<a class="more simple" href="gallery_belts_hoses.html" title="READ MORE">READ MORE</a>
+											<p class="description">רצועות הנעה וצינורות</p>
+											<!-- <a class="more simple" href="gallery_belts_hoses.html" title="READ MORE">READ MORE</a> -->
 										</div>
 									</div>
 								</div>
@@ -609,13 +611,13 @@
 								<div class="view align-center">
 									<div class="vertical-align-table">
 										<div class="vertical-align-cell">
-											<p class="description">Tire Change</p>
-											<a class="more simple" href="gallery_tire_change.html" title="READ MORE">READ MORE</a>
+											<p class="description">תיקוני בלמים</p>
+											<!-- <a class="more simple" href="gallery_tire_change.html" title="READ MORE">READ MORE</a> -->
 										</div>
 									</div>
 								</div>
 							</li>
-							<li class="wheels steering">
+							<!-- <li class="wheels steering">
 								<a href="gallery_wheel_services.html" title="Wheel Services">
 									<img src="images/samples/270x180/image_07.jpg" alt="">
 								</a>
@@ -666,50 +668,51 @@
 										</div>
 									</div>
 								</div>
-							</li>
+							</li> -->
 						</ul>
 					</div>
 				</div>
 			</div>
-			<div class="row dark-gray footer-row full-width padding-top-30 padding-bottom-50">
+			<br><br><br><br><br><br><br>
+<div class="row dark-gray footer-row full-width padding-top-30 padding-bottom-50">
 				<div class="row padding-bottom-30">
 					<div class="column column-1-3">
 						<ul class="contact-details-list">
 							<li class="sl-small-location-map">
-								<p>Tucson, AZ 80210:<br>
-								501 Archwood Lane</p>
+								<p>יוסף קלאוזנר 29<br>
+								רמלה</p>
 							</li>
 						</ul>
 					</div>
 					<div class="column column-1-3">
 						<ul class="contact-details-list">
 							<li class="sl-small-phone-circle">
-								<p>Feel Free to Call Us Now<br>
-								08-9353422</p>
+								<p>צור איתנו קשר<br>
+									08-9353422</p>
 							</li>
 						</ul>
 					</div>
 					<div class="column column-1-3">
-						<ul class="contact-details-list">
+						 <ul class="contact-details-list">
 							<li class="sl-small-truck-tow">
-								<p>24/7 Roadside Assistance<br>
-								(520) 577 2725</p>
+								<p> תיקוני דרך<br>
+									בשעות פעילות המוסך</p>
 							</li>
 						</ul>
 					</div>
 				</div>
 				<div class="row row-4-4 top-border page-padding-top">
 					<div class="column column-1-4">
-						<h6 class="box-header">ABOUT US</h6>
+						<h6 class="box-header">אודות</h6>
 						<ul class="list simple margin-top-20">
-							<li>Tucson, Arizona 80210</li>
-							<li>501 Archwood Lane</li>
-							<li><span>Mobile:</span>08-9353422</li>
-							<li><span>Assistance:</span>(520) 577 2725</li>
-							<li><span>E-mail:</span><a href="mailto:aazmaor@walla.co.il">aazmaor@walla.co.il</a></li>
+							<li>יוסף קלאוזנר 29</li>
+							<li>רמלה</li>
+							<li><span></span>08-9353422</li>
+							<li><span></span>08-9353422</li>
+							<li><span></span><a href="mailto:aazmaor@walla.co.il">aazmaor@walla.co.il</a></li>
 						</ul>
 						<ul class="social-icons gray margin-top-26">
-							<li>
+							<!-- <li>
 								<a target="_blank" href="http://facebook.com/QuanticaLabs" class="social-facebook" title="facebook"></a>
 							</li>
 							<li>
@@ -720,24 +723,24 @@
 							</li>
 							<li>
 								<a href="https://pinterest.com/quanticalabs/" class="social-pinterest" title="pinterest"></a>
-							</li>
+							</li> -->
 						</ul>
 					</div>
 					<div class="column column-1-4">
-						<h6 class="box-header">OUR SERVICES</h6>
+						<h6 class="box-header">השירותים שלנו</h6>
 						<ul class="list margin-top-20">
-							<li class="template-bullet">Engine Diagnostics</li>
-							<li class="template-bullet">Lube, Oil and Filters</li>
-							<li class="template-bullet">Belts and Hoses</li>
-							<li class="template-bullet">Air Conditioning</li>
-							<li class="template-bullet">Brake Repair</li>
-							<li class="template-bullet">Tire and Wheel Services</li>
-							<li class="template-bullet">Other Car Services</li>
+							<li>סיכה, שמן ופילטרים</li>
+							<li>רצועות הנעה וצינורות</li>
+							<li>מיזוג אוויר</li>
+							<li>תיקוני בלמים</li>
+							<li>צמיגים</li>
+							<li>שירותי רכב אחרים</li>
 						</ul>
 					</div>
 					<div class="column column-1-4">
-						<h6 class="box-header">POPULAR TAGS</h6>
-						<ul class="taxonomies margin-top-30">
+
+						<h6 class="box-header"><br></h6>
+						<!-- <h6 class="box-header">תגית פופולריות</h6>
 							<li><a href="category.html" title="BELTS">BELTS</a></li>
 							<li><a href="category.html" title="BRAKES">BRAKES</a></li>
 							<li><a href="category.html" title="DIAGNOSTICS">DIAGNOSTICS</a></li>
@@ -749,24 +752,24 @@
 							<li><a href="category.html" title="SUSPENSION">SUSPENSION</a></li>
 							<li><a href="category.html" title="TIRES">TIRES</a></li>
 							<li><a href="category.html" title="TRANSMISSION">TRANSMISSION</a></li>
-						</ul>
+						</ul> -->
 					</div>
 					<div class="column column-1-4">
-						<h6 class="box-header">HOURS</h6>
+						<h6 class="box-header">שעות פעילות</h6>
 						<ul class="list simple margin-top-20">
-							<li><span>Monday:</span>7:30am - 5:30pm</li>
-							<li><span>Tuesday:</span>7:30am - 5:30pm</li>
-							<li><span>Wednesday:</span>7:30am - 5:30pm</li>
-							<li><span>Thursday:</span>7:30am - 5:30pm</li>
-							<li><span>Friday:</span>7:30am - 5:30pm</li>
-							<li><span>Saturday:</span>7:30am - 3:00pm</li>
-							<li><span>Sunday:</span>Closed</li>
+							<li><span>17:30 - 07:30</span>ראשון:</li>
+							<li><span>17:30 - 07:30</span>שני:</li>
+							<li><span>17:30 - 07:30</span>שלישי:</li>
+							<li><span>17:30 - 07:30</span>רביעי:</li>
+							<li><span>17:30 - 07:30</span>חמישי:</li>
+							<li><span>15:00 - 07:30</span>שישי:</li>
+							<li><span>סגור</span>שבת:</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="row align-center padding-top-bottom-30">
-				<span class="copyright">© Copyright 2015 <a href="http://themeforest.net/item/carservice-mechanic-auto-shop-template/12332985?ref=QuanticaLabs" title="Carservice Template" target="_blank">Carservice Template</a> by <a href="http://quanticalabs.com" title="QuanticaLabs" target="_blank">QuanticaLabs</a></span>
+				<span class="copyright">© כל הזכויות שמורות 2017 <a href="#" title="Carservice Template" target="_self">מוסך א.א.צ מאור</a></span>
 			</div>
 		</div>
 		<a href="#top" class="scroll-top animated-element template-arrow-up" title="Scroll to top"></a>
