--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.2" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="keywords" content="Mechanic, Car, Auto" />
-		<meta name="description" content="Responsive Mechanic Auto Shop Template" />
+		<meta name="description" content="מוסך א.א.צ מאור" />
 		<!--slider revolution-->
 		<link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
 		<!--style-->
@@ -1143,7 +1143,7 @@
 						<h6 class="box-header">השירותים שלנו</h6>
 						<ul class="list margin-top-20">
 							<li>סיכה, שמן ופילטרים</li>
-							<li>רצועות הינע וצינורות</li>
+							<li>רצועות הנעה וצינורות</li>
 							<li>מיזוג אוויר</li>
 							<li>תיקוני בלמים</li>
 							<li>צמיגים</li>
