--- a/services.html
+++ b/services.html
@@ -602,7 +602,7 @@
 						<ul class="contact-details-list">
 							<li class="sl-small-location-map">
 								<p>יוסף קלאוזנר 29<br>
-								רמלה</p>
+									רמלה</p>
 							</li>
 						</ul>
 					</div>
@@ -615,7 +615,7 @@
 						</ul>
 					</div>
 					<div class="column column-1-3">
-						 <ul class="contact-details-list">
+						<ul class="contact-details-list">
 							<li class="sl-small-truck-tow">
 								<p> תיקוני דרך<br>
 									בשעות פעילות המוסך</p>
@@ -629,7 +629,7 @@
 						<ul class="list simple margin-top-20">
 							<li>יוסף קלאוזנר 29</li>
 							<li>רמלה</li>
-							<li><span></span>08-9353422</li>
+							<li><span></span><a href="tel:08-9353422">08-9353422</a></li>
 							<li><span></span><a href="mailto:aazmaor@walla.co.il">aazmaor@walla.co.il</a></li>
 						</ul>
 						<ul class="social-icons gray margin-top-26">
@@ -648,32 +648,32 @@
 						</ul>
 					</div>
 					<div class="column column-1-4">
-						<h6 class="box-header">השירותים שלנו</h6>
+						<h6 class="box-header">שירותי חשמל רכב</h6>
 						<ul class="list margin-top-20">
-							<li>סיכה, שמן ופילטרים</li>
-							<li>רצועות הנעה וצינורות</li>
+							<li>דיאגנוסטיקת מנוע</li>
 							<li>מיזוג אוויר</li>
-							<li>תיקוני בלמים</li>
-							<li>צמיגים</li>
-							<li>שירותי רכב אחרים</li>
 						</ul>
 					</div>
 					<div class="column column-1-4">
-
-						<h6 class="box-header"><br></h6>
-						<!-- <h6 class="box-header">תגית פופולריות</h6>
-							<li><a href="category.html" title="BELTS">BELTS</a></li>
-							<li><a href="category.html" title="BRAKES">BRAKES</a></li>
-							<li><a href="category.html" title="DIAGNOSTICS">DIAGNOSTICS</a></li>
-							<li><a href="category.html" title="ENGINE">ENGINE</a></li>
-							<li><a href="category.html" title="FILTERS">FILTERS</a></li>
-							<li><a href="category.html" title="HEATING">HEATING</a></li>
-							<li><a href="category.html" title="OILS">OILS</a></li>
-							<li><a href="category.html" title="STEERING">STEERING</a></li>
-							<li><a href="category.html" title="SUSPENSION">SUSPENSION</a></li>
-							<li><a href="category.html" title="TIRES">TIRES</a></li>
-							<li><a href="category.html" title="TRANSMISSION">TRANSMISSION</a></li>
-						</ul> -->
+						<h6 class="box-header">שירותי מכונאות</h6>
+						<ul class="list margin-top-20">
+							<li>טיפולים תקופתיים</li>
+							<li>סיכה, שמן ופילטרים</li>
+							<li>רצועות הנעה וצינורות</li>
+							<li>תיקוני בלמים</li>
+							<!--
+                                <li><a href="category.html" title="BELTS">BELTS</a></li>
+                                <li><a href="category.html" title="BRAKES">BRAKES</a></li>
+                                <li><a href="category.html" title="DIAGNOSTICS">DIAGNOSTICS</a></li>
+                                <li><a href="category.html" title="ENGINE">ENGINE</a></li>
+                                <li><a href="category.html" title="FILTERS">FILTERS</a></li>
+                                <li><a href="category.html" title="HEATING">HEATING</a></li>
+                                <li><a href="category.html" title="OILS">OILS</a></li>
+                                <li><a href="category.html" title="STEERING">STEERING</a></li>
+                                <li><a href="category.html" title="SUSPENSION">SUSPENSION</a></li>
+                                <li><a href="category.html" title="TIRES">TIRES</a></li>
+                                <li><a href="category.html" title="TRANSMISSION">TRANSMISSION</a></li>
+                            </ul> -->
 					</div>
 					<div class="column column-1-4">
 						<h6 class="box-header">שעות פעילות</h6>
