--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,17 @@
 		<link rel="stylesheet" type="text/css" href="fonts/social/styles.css">
 		<link rel="shortcut icon" href="images/favicon.ico">
 	</head>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114321736-1"></script>
+	<script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-114321736-1');
+	</script>
+
 	<body>
 		<div class="site-container">
 			<div class="header-top-bar-container clearfix">
