--- a/galleries.html
+++ b/galleries.html
@@ -25,6 +25,18 @@
 		<link rel="stylesheet" type="text/css" href="fonts/template/styles.css">
 		<link rel="stylesheet" type="text/css" href="fonts/social/styles.css">
 		<link rel="shortcut icon" href="images/favicon.ico">
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114321736-1"></script>
+		<script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-114321736-1');
+		</script>
+
+
 	</head>
 	<body>
 		<div class="site-container">
